<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProjetS4</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_apropos">A propos</string>
    <string name="action_suivi">Suivi</string>

    <!-- MainActivity -->
    <string name="txtTaille">Rentrez votre taille (en cm)</string>
    <string name="txtPoids">Rentrez votre poids (en kg)</string>
    <string name="rdgHomme">Homme</string>
    <string name="rdgFemme">Femme</string>
    <string name="rdgEnfant">Enfant</string>
    <string name="rdgAdulte">Adulte</string>
    <string name="btnValider">Valider</string>
    <string name="clicValider">clicValider</string>

    <!-- PlatActivity -->
    <string name="title_activity_plat">Choix du repas</string>
    <string name="boutonConseille">Conseiller</string>
    <string name="boutonValiderMenu">Valider</string>
    <string name="clicConseiller">clicConseiller</string>
    <string name="txtIMC">Votre IMC : </string>
    <string name="txtCalCons">Calories conseillées : </string>

    <!-- PropositionActivity -->
    <string name="title_activity_proposition">Notre proposition</string>
    <string name="txtProposition">Voici ce que nous vous conseillons</string>
    <string name="btnAccepter">Accepter</string>
    <string name="btnRefuser">Refuser</string>
    <string name="bCal">Calories avant</string>
    <string name="aCal">Calories après</string>
    <string name="clicAccepter">clicAccepter</string>
    <string name="clicRefuser">clicRefuser</string>

    <!-- RepasActivity -->
    <string name="title_activity_repas">Votre repas</string>
    <string name="txtRepas">Votre repas :</string>
    <string name="btnEnregistrer">Enregistrer</string>
    <string name="btnPhoto">Photo</string>
    <string name="clicEnregistrer">clicEnregistrer</string>

    <!-- SuiviActivity -->
    <string name="title_activity_suivi">Suivi</string>
    
    <!--  AproposActivity -->
    <string name="title_activity_apropos">A propos</string>
    <string name="tv1apropos">Application créée par Valentin ARGENTY et Rayane BOURDIM</string>
    <string name="tv2apropos">IUT Informatique Paul Sabatier - Module P222 - 2017</string>
    <string name="tv3apropos">Cette application vous conseille pour choisir un repas équilibré</string>
    <string name="action_accueil">Accueil</string>
    <string name="toastEnregistre">Repas enregistré !</string>

</resources>
